[project]
name = "ml-blueprint"
version = "0.1.0"
description = "A machine learning project blueprint with standardized structure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "lab>=8.5",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.9",
    "notebook>=7.4.7",
    "nbformat>=5.10.4",
    "jupyter-server>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
